# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ades"
version = "0.1.0"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2018"
description = "AES & DES, Encryption & Decryption"
repository = "https://github.com/ikfr/ades-rs"
license = "MIT OR Apache-2.0"

[[bin]]
name = "aes"
path = "src/aes.rs"

[[bin]]
name = "des"
path = "src/des.rs"

[[bin]]
name = "ades"
path = "src/ades.rs"

[dependencies]
openssl = "0.10"
lazy_static = "1.4"