# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ades"
version = "0.1.5"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2018"
description = "AES & DES, Encryption & Decryption"
repository = "https://github.com/hzqd/ades"
license = "MIT OR Apache-2.0"

[dependencies]
aoko = "0.2"
openssl = "0.10"
lazy_static = "1.4"

[dependencies.clap]
version = "~3.0"
features = ["derive"]